# O-Deck

./: .env.example  .gitignore  config.example.yaml  install.sh  package.json  pyproject.toml  uninstall.sh
backend/cyberdeck/: cache.py  config.py  device.py  main.py  pomodoro.py  scheduler.py  ws.py
backend/cyberdeck/integrations/: base.py  calendar.py  github.py  photos.py  rss.py  spotify.py  transit.py  weather.py
backend/tests/: test_cache.py  test_config.py  test_device.py  test_main.py  test_pomodoro.py  test_scheduler_and_base.py  test_ws.py
backend/tests/integrations/: test_calendar.py  test_github.py  test_photos.py  test_rss.py  test_spotify.py  test_transit.py  test_weather.py
design/: O-Deck Home.html  design-chat-context.md
design/screens/: apps-1.jsx  apps-2.jsx  notes.jsx  system.jsx  variation-c3.jsx
docs/: design.md  integrations.md  setup.md
docs/superpowers/plans/: 2026-04-26-backend-foundation.md  2026-04-26-backend-integrations.md  2026-04-26-frontend-foundation.md  2026-04-26-fullscreen-apps.md  (+2 more)
frontend/: package-lock.json  package.json  playwright.config.ts  svelte.config.js  tailwind.config.ts
frontend/src/: app.css  app.html
frontend/tests/: calendar.spec.ts  diagnostics.spec.ts  doomscroll.spec.ts  github.spec.ts  helpers.ts  home.spec.ts  photos.spec.ts  pomodoro.spec.ts  showcase.spec.ts  subway.spec.ts  transit.spec.ts
scripts/: detect-display.sh  kiosk-launch.sh  setup-kiosk.sh  setup-ssh.sh  update.sh
scripts/auth/: google-auth.py  spotify-auth.py
systemd/: cyberdeck-backend.service  cyberdeck-kiosk.service
(+31 files in other folders)
